[gd_scene load_steps=6 format=3 uid="uid://dwwxnqjh3y2g2"]

[ext_resource type="Texture2D" uid="uid://bnaaux7kwtar3" path="res://assets/menu/menu_bg.png" id="1_5tcg4"]
[ext_resource type="Script" path="res://Scenes/menu/online_menu.gd" id="1_akdh8"]
[ext_resource type="Theme" uid="uid://cvhrwgxh48p4h" path="res://Scenes/level/custom_theme.tres" id="2_wcxjb"]
[ext_resource type="FontFile" uid="uid://ibdd8p7nexah" path="res://assets/fonts/Arkitech Bold.ttf" id="3_cjx38"]
[ext_resource type="AudioStream" uid="uid://dskh15enrxx3p" path="res://music/blinchik.mp3" id="5_nvt13"]

[node name="OnlineMenu" type="Node2D"]
script = ExtResource("1_akdh8")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(640, 352)
texture = ExtResource("1_5tcg4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1279.0
offset_bottom = 704.0
theme = ExtResource("2_wcxjb")

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 27.0
offset_right = 210.0
offset_bottom = 120.0
theme_override_colors/icon_pressed_color = Color(0.521569, 0.443137, 0, 1)
text = "back"

[node name="LogiBotLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -318.5
offset_top = 40.0
offset_right = 319.5
offset_bottom = 145.0
grow_horizontal = 2
theme = ExtResource("2_wcxjb")
theme_override_fonts/font = ExtResource("3_cjx38")
theme_override_font_sizes/font_size = 72
text = "online"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Login" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 216.0
offset_right = 499.0
offset_bottom = 660.0

[node name="Username" type="LineEdit" parent="Control/Login"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286822
anchor_top = 0.130631
anchor_right = 0.715762
anchor_bottom = 0.295045
grow_horizontal = 2
placeholder_text = "Username"
alignment = 1
max_length = 30
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="Control/Login"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.5
offset_top = -284.0
offset_right = 58.5
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
text = "SUbMIT"

[node name="Label" type="Label" parent="Control/Login"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_right = 73.5
offset_bottom = 58.0
grow_horizontal = 2
text = "Create user"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerInfo" type="Label" parent="Control/Login"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -58.0
offset_right = 73.5
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderBoard" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 614.0
offset_top = 216.0
offset_right = 1259.0
offset_bottom = 654.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/LeaderBoard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -290.5
offset_top = -344.0
offset_right = 290.5
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true

[node name="Label" type="Label" parent="Control/LeaderBoard"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_right = 116.5
offset_bottom = 57.0
grow_horizontal = 2
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HTTPRequestCreateUpdate" type="HTTPRequest" parent="."]

[node name="HTTPRequestLeaderBoard" type="HTTPRequest" parent="."]

[node name="HTTPRequestSelfName" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nvt13")
autoplay = true

[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/Login/SubmitButton" to="." method="_on_submit_button_pressed"]
